[package]
name = "rav1d"
version = "0.1.0"
authors = ["Rain Liu <yuliu@outlook.com>"]
edition = "2018"
description = "Rust AV1 Decoder (rav1d)"
license = "MIT"
documentation = "https://github.com/rainliu/rav1d"
homepage = "https://github.com/rainliu/rav1d"
repository = "https://github.com/rainliu/rav1d"
include = ["**/*.rs",  "Cargo.toml"]

[features]
binaries = ["ivf", "y4m", "clap"]
default = ["binaries"]

[dependencies]
bitstream-io = "0.8"
clap = { version = "2", optional = true, default-features = false }
y4m = { version = "0.3.2", optional = true }
ivf = { path = "ivf/", optional = true }

[[bin]]
name = "rav1d"
required-features = ["binaries"]

[workspace]
members = ["ivf"]
