[package]
name = "rav1d"
version = "0.1.0"
authors = ["Rain Liu <yuliu@outlook.com>"]
edition = "2018"
description = "Rust AV1 Decoder (rav1d)"
license = "MIT"
documentation = "https://github.com/rainliu/rav1d"
homepage = "https://github.com/rainliu/rav1d"
repository = "https://github.com/rainliu/rav1d"
include = ["**/*.rs",  "Cargo.toml"]

[features]
debug_log = []
binaries = ["ivf", "y4m", "clap"]
default = ["binaries"]

[dependencies]
arg_enum_proc_macro = "0.1.1"
bitstream-io = "0.8"
num-traits = "0.2"
num-derive = "0.2"
# rayon = "1.0"
clap = { version = "2", optional = true, default-features = false }
y4m = { path = "y4m/", optional = true }
ivf = { path = "ivf/", optional = true }

[[bin]]
name = "rav1d"
required-features = ["binaries"]

[workspace]
members = ["ivf", "y4m"]